stepper alignment issues fixed

--- a/css/index.css
+++ b/css/index.css
@@ -407,14 +407,15 @@ background-image: url(https://ionicframework.com/img/getting-started/ionic-nativ
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(255, 255, 255, .04588);
+  height: 430px;
 }
 .card-header {
   padding: 20px;
-  border-bottom: 1px solid #c31432; 
+  border-bottom: 1px solid #c31432;
 }
 .card-header .steps {
   display: flex;
-  column-count: 3;
+  column-count: 9;
   justify-content: center;
   align-items: center;
 }
@@ -433,13 +434,13 @@ background-image: url(https://ionicframework.com/img/getting-started/ionic-nativ
   box-shadow: 0px 3px 0px 0px #c31432;
 }
 .card-header .steps .step.active span {
-  background: linear-gradient(to right top,  #c31432 0%, #240b36 100%);
+  background: linear-gradient(to right top, #c31432 0%, #240b36 100%);
   color: white;
   border: 1px solid #c31432;
 }
 .card-body {
   padding: 16px;
-  /* min-height: 250px; */
+  min-height: 250px;
   display: flex;
   justify-items: center;
   align-items: center;
@@ -458,8 +459,9 @@ background-image: url(https://ionicframework.com/img/getting-started/ionic-nativ
   display: block !important;
 }
 .card-footer {
-  padding: 16px;
-  /* border-top: 1px solid #c31432; */
+  /* padding: 16px; */
+ border-top: 1px solid #c31432;
+ 
 }
 .card-footer button {
   border-radius: 5px;
@@ -471,7 +473,7 @@ background-image: url(https://ionicframework.com/img/getting-started/ionic-nativ
   font-weight: 500;
   font-size: 16px;
   color: white;
-  background: linear-gradient(to right top,  #c31432 0%, #240b36 100%);;;
+  background: linear-gradient(to right top, #c31432 0%, #240b36 100%);
   box-shadow: 0px 5px 0px 0px #c31432;
 }
 .card-footer button:active {
@@ -485,8 +487,6 @@ background-image: url(https://ionicframework.com/img/getting-started/ionic-nativ
     width: 100%;
  }
 }
-
-
 
 /* admission section css */
 .flexbox {
